[package]
name = "gb-emu"
version = "0.1.0"
authors = ["Michael Krasnitski <michael.krasnitski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
clap = "2.33.3"
enum-primitive-derive = "0.2.1"
maplit = "1.0.2"
num-traits = "0.2.14"
rand = {version = "0.8.4", features=["min_const_gen"]}
serde = {version = "1.0", features=["derive"]}
sdl2 = "0.34.3"
spin_sleep = "1.0.0"
structopt = "0.3.21"
toml = "0.5.8"
