[package]
name = "quage"
version = "0.5.0"
authors = ["Michael Krasnitski <michael.krasnitski@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
bincode = "1.3.3"
clap = "2.33.3"
enum-primitive-derive = "0.2.1"
num-traits = "0.2.14"
rand = { version = "0.8.4", features=["min_const_gen"] }
serde = { version = "1.0", features=["derive"] }
serde-big-array = { version = "0.3.2", features=["const-generics"] }
sdl2 = "0.34.3"
spin_sleep = "1.0.0"
structopt = "0.3.21"
toml = "0.5.8"
zstd = "0.9.0"
